--- a/style.css
+++ b/style.css
@@ -36,12 +36,11 @@ body.reveal {
 
 [data-first],
 .section-swap,
-.reveal {
+section {
   opacity: 0;
   transform: translateY(25px);
   animation: revealSection 1s ease-out forwards;
 }
-
 
 @keyframes revealSection {
   to {
@@ -163,7 +162,9 @@ article,
 .inspiration-img {
   border-radius: 20px;
   overflow: hidden;
-}
+}                                                      
+
+
 
 
 
